feat: Implement Hadith, Prayer Times, Qiblah, Zakat, and comprehensive Settings features with localization support.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -774,5 +774,15 @@
   "@zakatStart": {
     "description": "نص تحفيزي لبدء حساب الزكاة",
     "type": "text"
-  }
+  },
+  "aboutUs": "من نحن",
+  "appNotifications": "إشعارات التطبيق",
+  "enablePrayerNotifications": "تفعيل إشعارات الأذان",
+  "enableQuranReminders": "تفعيل إشعارات تذكير القرآن",
+  "prayerNotificationsEnabled": "تم تفعيل إشعارات الأذان",
+  "prayerNotificationsDisabled": "تم تعطيل إشعارات الأذان",
+  "quranRemindersEnabled": "تم تفعيل إشعارات تذكير القرآن",
+  "quranRemindersDisabled": "تم تعطيل إشعارات تذكير القرآن",
+  "quranReminderTitle": "📖 تذكير بقراءة القرآن",
+  "quranReminderBody": "لا تنس وردك من القرآن الكريم 🌿"
 }
