end update design for layout view

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -784,5 +784,6 @@
   "quranRemindersEnabled": "تم تفعيل إشعارات تذكير القرآن",
   "quranRemindersDisabled": "تم تعطيل إشعارات تذكير القرآن",
   "quranReminderTitle": "📖 تذكير بقراءة القرآن",
-  "quranReminderBody": "لا تنس وردك من القرآن الكريم 🌿"
+  "quranReminderBody": "لا تنس وردك من القرآن الكريم 🌿",
+  "allServices": "كل الخدمات"
 }
