feat: Implement core features including Quran display and player, Surahs/Juz/Hizb lists, Azkar, Prayer Times, Qiblah, and Hadith, along with localization and dependency injection setup.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -671,6 +671,8 @@
     "description": "",
     "type": "text"
   },
+  "juzText": "الجزء",
+  "hizbText": "الحزب",
   "surahsText": "السور",
   "@surahsText": {
     "description": "عنوان قائمة السور في شاشة القرآن",
