--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -671,6 +671,8 @@
     "description": "",
     "type": "text"
   },
+  "juzText": "Juz",
+  "hizbText": "Hizb",
   "surahsText": "Surahs",
   "@surahsText": {
     "description": "Title for the list of Surahs",
